--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -20,8 +20,25 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+html * {
+  scrollbar-width: thin;
+  scrollbar-color: transparent #6b7280;
 }
+
+*::-webkit-scrollbar,
+html *::-webkit-scrollbar {
+  height: 12px;
+  width: 10px;
+}
+
+*::-webkit-scrollbar-track,
+html *::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+*::-webkit-scrollbar-thumb,
+html *::-webkit-scrollbar-thumb {
+  background-color: #6b7280;
+}
+
+@layer utilities {}
