--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -20,10 +20,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-html * {
+/* html * {
   scrollbar-width: thin;
-  scrollbar-color: transparent #6b7280;
-}
+  scrollbar-color: #6b7280 transparent;
+} */
 
 *::-webkit-scrollbar,
 html *::-webkit-scrollbar {
@@ -39,6 +39,34 @@ html *::-webkit-scrollbar-track {
 *::-webkit-scrollbar-thumb,
 html *::-webkit-scrollbar-thumb {
   background-color: #6b7280;
+  border-radius: 6px;
 }
+
+*::-webkit-scrollbar-thumb:hover,
+html *::-webkit-scrollbar-thumb:hover {
+  background: #616774;
+}
+
+.overflow-x-scroll::-webkit-scrollbar {
+  height: 10px;
+}
+
+.overflow-x-scroll::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.overflow-x-scroll::-webkit-scrollbar-thumb {
+  background: #6b7280;
+  border-radius: 6px;
+}
+
+.overflow-x-scroll::-webkit-scrollbar-thumb:hover {
+  background: #616774;
+}
+
+/* .overflow-x-scroll {
+  scrollbar-width: thin;
+  scrollbar-color: #6b7280 transparent;
+} */
 
 @layer utilities {}
